Fixed wording. Added complete actions and back buttons. Added negotiator fields.